--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "8.5.1",
     "web-vitals": "^1.0.1"
