--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "4.5.2",
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
+    "jquery": "^3.6.0",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
