--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-project-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,10 +12,13 @@
     "font-awesome": "4.7.0",
     "jquery": "^3.6.0",
     "node-sass": "4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "reactstrap": "8.5.1",
     "web-vitals": "^1.0.1"
   },
